--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/loretta-1.png" width="350x350" alt="Loretta's profile picture"></td>
+            <td><img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.6435-9/139417410_10216045001552530_3019173700067955375_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=2jWkbLRAeGsAX8jOPak&_nc_ht=scontent-dfw5-1.xx&oh=a6b958426f75d5e7fdb4710d69c85188&oe=6171BFD4" width="350x350" alt="Loretta's profile picture"></td>
             <td>
                 <h1>Loretta Hall</h1>
                 <p>
